# VR-Hand

./: CMakeLists.txt  package.xml  readme.md
Unity/Scripts/: Gesture.cs  HandPosePublisher.cs
config/: fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  sensors_3d_table_top.yaml  tams_f329_with_left_motorhand.srdf
launch/: demo.launch  hand_tracking.launch  visualize_finger_tip.launch
msg/: HandTipPose.msg  JointPositions.msg
scripts/: dynamic_tracking.py  finger_tip_visualize.py  ganhand_bioik.py  hand_control.py  hand_ik.py  mover.py  mover_test.py  synchronize_unity.py
scripts/old/: hand_ik.py
srv/: MoverService.srv
